welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:10: error: type mismatch;
 found   : Unit
 required: String
    if(day<=0)
    ^alarmClock:9: error: type mismatch;
 found   : Unit
 required: String
  if(vacation==false){
  ^alarmClock:15: error: return outside method definition
  return "off"
  ^